--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,18 @@ input,
 button {
   font-family: "Open Sans", sans-serif;
 }
-
+body {
+  font-family: sans-serif;
+  background-color: #ffffff;
+  color: #000000;
+}
+/* Mode gelap */
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #ffffff;
+    color: #000000;
+  }
+}
 input,
 button {
   font-size: 16px;
